fixed record text wrapping kind of

--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ body {
     text-align: center;
     font-family: 'Varela Round', sans-serif;
     font-size: 100px;
+    white-space: nowrap;
     width: 100%;
     margin: 6px 18px;
 }
